nueva config para artefactos en bucket

--- a/pipeline_run.ipynb
+++ b/pipeline_run.ipynb
@@ -19,6 +19,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "eda0d8e5-c772-46c6-85ff-4ed8e0696aa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install google-cloud-pipeline-components==0.2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "5dd984ac-7ab1-454a-bac9-fbbba93d7cee",
    "metadata": {
     "tags": []
@@ -28,7 +38,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project ID:  vertex-testing-327520\n"
+      "Project ID:  teco-prod-adam-dev-826c\n"
      ]
     }
    ],
@@ -94,8 +104,8 @@
     "# configuration of hp tuning job trials\n",
     "RF_HP_IMAGE = f'gcr.io/{PROJECT_ID}/rf_hp_job:v1'\n",
     "LR_HP_IMAGE = f'gcr.io/{PROJECT_ID}/lr_hp_job:v1'\n",
-    "HP_TRAIN_MACHINE = \"n1-standard-8\"\n",
-    "HP_TRIALS = 10\n",
+    "HP_TRAIN_MACHINE = \"n1-standard-16\"\n",
+    "HP_TRIALS = 15\n",
     "PARALLEL_TRIALS = 3\n",
     "\n",
     "# umbral de aceptabilidad para prediccion batch\n",
@@ -123,8 +133,8 @@
     "# BigQuery: definiciones de variables, pueden ser facilmente reemplazadas para adaptarse a otros propositos\n",
     "# BigQuery variable definitions: those can be easily changed to suit another purpose\n",
     "\n",
-    "BQ_DATASET_HISTORIC_NAME = 'chicago_taxi_historic'\n",
-    "BQ_DATASET_CURRENT_NAME = 'chicago_taxi_current'\n",
+    "BQ_DATASET_HISTORIC_NAME = 'chicago_taxi_historic_test'\n",
+    "BQ_DATASET_CURRENT_NAME = 'chicago_taxi_current_test'\n",
     "\n",
     "BQ_HISTORIC_RAW = 'raw'\n",
     "BQ_HISTORIC_STAGE = 'stage_ml'\n",
@@ -159,7 +169,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project ID:  vertex-testing-327520\n"
+      "Project ID:  teco-prod-adam-dev-826c\n"
      ]
     }
    ],
@@ -375,6 +385,7 @@
     "        project = project_id,\n",
     "        region = gcp_region,\n",
     "        stage_data_bucket = stage_data_bucket,\n",
+    "        timestamp = dataframe.outputs['timestamp'],\n",
     "        winning_model_name = model_selection.outputs['winning_model_name'],\n",
     "        trials = trials,\n",
     "        parallel_trials = parallel_trials,\n",
@@ -496,40 +507,59 @@
      "output_type": "stream",
      "text": [
       "INFO:google.cloud.aiplatform.pipeline_jobs:Creating PipelineJob\n",
-      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob created. Resource name: projects/155345500736/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220210140111\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob created. Resource name: projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142\n",
       "INFO:google.cloud.aiplatform.pipeline_jobs:To use this PipelineJob in another session:\n",
-      "INFO:google.cloud.aiplatform.pipeline_jobs:pipeline_job = aiplatform.PipelineJob.get('projects/155345500736/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220210140111')\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:pipeline_job = aiplatform.PipelineJob.get('projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142')\n",
       "INFO:google.cloud.aiplatform.pipeline_jobs:View Pipeline Job:\n",
-      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/chicago-taxi-pipeline-20220210140111?project=155345500736\n"
+      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/chicago-taxi-pipeline-20220315190142?project=1085281337041\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.pipeline_jobs:PipelineJob run completed. Resource name: projects/1085281337041/locations/us-central1/pipelineJobs/chicago-taxi-pipeline-20220315190142\n"
      ]
     }
    ],
    "source": [
-    "pipeline_job.submit()"
+    "pipeline_job.run()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25013d48-2faa-4635-bed4-9025c8389b08",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92a167db-1a5a-4831-92a4-bc25c6ba34af",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "environment": {
-   "name": "tf2-gpu.2-6.m80",
+   "name": "tf2-gpu.2-6.m81",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-6:m80"
+   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-6:m81"
   },
   "kernelspec": {
    "display_name": "Python 3",
