--- a/pipeline_setup.ipynb
+++ b/pipeline_setup.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "9c86100e-0e9e-4338-989d-0f229e4ebe80",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project ID:  vertex-testing-327520\n",
+      "Project ID:  teco-prod-adam-dev-826c\n",
       "env: PATH=/usr/local/cuda/bin:/opt/conda/bin:/opt/conda/condabin:/usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games:/home/jupyter/.local/bin\n"
      ]
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "6bdbfb06-728c-4996-9ea2-cabf3c603037",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "46488da4-cbba-4e33-8326-fbbed6cadae1",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "2dd5c5c5-d161-4681-aa20-327b6edc666d",
    "metadata": {},
    "outputs": [],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "69312c25-4efc-43b3-8ce3-a9f8da059499",
    "metadata": {},
    "outputs": [
@@ -286,8 +286,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current year:  2021\n",
-      "current month:  12\n",
+      "current year:  2022\n",
+      "current month:  1\n",
       "sample size:  100000\n"
      ]
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "c8a2d234-978a-4f42-8c11-d03198f4866c",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
      "output_type": "stream",
      "text": [
       "past year:  2021\n",
-      "past month:  11\n"
+      "past month:  12\n"
      ]
     }
    ],
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "2f6fc18e-c8e1-4e43-9113-d5bedbc0e077",
    "metadata": {},
    "outputs": [],
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "5b5e930e-8924-4230-8c7e-ada1da94f886",
    "metadata": {},
    "outputs": [],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "31e812b3-c1e5-43e8-b104-b836e16bfd31",
    "metadata": {},
    "outputs": [],
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "e0703445-9c4a-46d9-b1e8-983f2be54257",
    "metadata": {},
    "outputs": [],
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "eb835be7-7c16-4376-9cf2-382e09973f4e",
    "metadata": {},
    "outputs": [],
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "46bce57e-14be-475f-b5ec-646bb7c0f7f1",
    "metadata": {},
    "outputs": [],
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "9f96c959-4834-43e5-a817-d7c91dfea381",
    "metadata": {},
    "outputs": [
@@ -589,8 +589,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stage bucket:  vertex-testing-327520-chicago_taxi_stage\n",
-      "Pipeline bucket:  vertex-testing-327520-chicago_taxi_pipelines\n"
+      "Stage bucket:  teco-prod-adam-dev-826c-chicago_taxi_stage\n",
+      "Pipeline bucket:  teco-prod-adam-dev-826c-chicago_taxi_pipelines\n"
      ]
     }
    ],
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "080af8de-a682-4d27-b478-0cd8845b254a",
    "metadata": {},
    "outputs": [
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "87afdb17-a474-4651-a336-e8e26baf3b38",
    "metadata": {},
    "outputs": [
@@ -764,9 +764,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "6f4de654-b1f7-40f2-8dc0-7bcae1e5267b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -791,8 +793,9 @@
       "\n",
       "\n",
       "\n",
-      "STAGE_DATA_BUCKET = 'chicago_taxi_stage'\n",
-      "TRAIN_DATA_PATH = 'chicago_taxi_train.csv'\n",
+      "STAGE_DATA_BUCKET = 'your_bucket'\n",
+      "TRAIN_DATA_PATH = 'data/chicago_taxi_train.csv'\n",
+      "LOCAL_DATA_PATH = 'chicago_taxi_train.csv'\n",
       "\n",
       "cols = ['trip_month', 'trip_day', 'trip_day_of_week',\n",
       "       'trip_hour', 'trip_seconds', 'trip_miles', 'euclidean', 'target',\n",
@@ -831,9 +834,9 @@
       "    gcsclient = storage.Client() # tal vez vaya stage_data_bucket\n",
       "    bucket = gcsclient.get_bucket(STAGE_DATA_BUCKET)\n",
       "    blob = bucket.blob(TRAIN_DATA_PATH)\n",
-      "    blob.download_to_filename(TRAIN_DATA_PATH)\n",
+      "    blob.download_to_filename(LOCAL_DATA_PATH)\n",
       "\n",
-      "    data = pd.read_csv(TRAIN_DATA_PATH, usecols=cols)\n",
+      "    data = pd.read_csv(LOCAL_DATA_PATH, usecols=cols)\n",
       "    # Si estas usando volumenes muy grnades de datos, usa un sample \n",
       "    # If you're dealing with really big data, use a sample data = data.sample(frac = 0.2, random_state = 42)\n",
       "    train_data, validation_data = tts(data, test_size=0.3)\n",
@@ -902,6 +905,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "90004a19-d1d0-4ab2-a484-583be01d9ac9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sed -i 's/your_bucket/{STAGE_DATA_BUCKET}/' hp_lr/trainer/task.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e1773ce3-c3bc-4cd6-a80d-222356b7b490",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sed -i 's/your_bucket/{STAGE_DATA_BUCKET}/' hp_rf/trainer/task.py"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f005446b-7a18-4fde-a831-0d1029d2eb8c",
    "metadata": {},
@@ -918,7 +941,7 @@
     {
      "data": {
       "text/plain": [
-       "'gcr.io/vertex-testing-327520/rf_hp_job:v1'"
+       "'gcr.io/teco-prod-adam-dev-826c/rf_hp_job:v1'"
       ]
      },
      "execution_count": 17,
@@ -940,7 +963,7 @@
     {
      "data": {
       "text/plain": [
-       "'gcr.io/vertex-testing-327520/lr_hp_job:v1'"
+       "'gcr.io/teco-prod-adam-dev-826c/lr_hp_job:v1'"
       ]
      },
      "execution_count": 18,
@@ -955,17 +978,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d2594c50-7f1b-4006-9361-aa9ea75bc096",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending build context to Docker daemon  11.78kB\n",
+      "Step 1/5 : from gcr.io/deeplearning-platform-release/sklearn-cpu\n",
+      " ---> 2574879dfd34\n",
+      "Step 2/5 : WORKDIR /\n",
+      " ---> Using cache\n",
+      " ---> 3dbd66708df1\n",
+      "Step 3/5 : RUN pip install cloudml-hypertune sklearn scipy google-cloud-bigquery joblib pandas google-cloud-storage\n",
+      " ---> Using cache\n",
+      " ---> 0040d68f198b\n",
+      "Step 4/5 : COPY trainer /trainer\n",
+      " ---> 5f12dfadda9e\n",
+      "Step 5/5 : ENTRYPOINT [\"python\", \"-m\", \"trainer.task\"]\n",
+      " ---> Running in 457ce0cad30d\n",
+      "Removing intermediate container 457ce0cad30d\n",
+      " ---> ed1dea4c596c\n",
+      "Successfully built ed1dea4c596c\n",
+      "Successfully tagged gcr.io/teco-prod-adam-dev-826c/rf_hp_job:v1\n"
+     ]
+    }
+   ],
    "source": [
-    "#!docker build ./hp_rf -t $RANDOM_FOREST_IMAGE"
+    "# !docker build ./hp_rf -t $RANDOM_FOREST_IMAGE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "92b8bf14-0847-4ff9-ae21-d7dd32aa07dc",
    "metadata": {},
    "outputs": [
@@ -975,32 +1022,114 @@
      "text": [
       "Sending build context to Docker daemon  11.78kB\n",
       "Step 1/5 : from gcr.io/deeplearning-platform-release/sklearn-cpu\n",
-      " ---> 10212f0d9fdb\n",
+      " ---> 2574879dfd34\n",
       "Step 2/5 : WORKDIR /\n",
       " ---> Using cache\n",
-      " ---> 18c44e6bd349\n",
+      " ---> 3dbd66708df1\n",
       "Step 3/5 : RUN pip install cloudml-hypertune sklearn scipy google-cloud-bigquery joblib pandas google-cloud-storage\n",
       " ---> Using cache\n",
-      " ---> 4a0dc94a9615\n",
+      " ---> 0040d68f198b\n",
       "Step 4/5 : COPY trainer /trainer\n",
-      " ---> 83e9c94cc5fc\n",
+      " ---> 78bbf259a494\n",
       "Step 5/5 : ENTRYPOINT [\"python\", \"-m\", \"trainer.task\"]\n",
-      " ---> Running in 1d68bc68e79d\n",
-      "Removing intermediate container 1d68bc68e79d\n",
-      " ---> 50944b114c83\n",
-      "Successfully built 50944b114c83\n",
-      "Successfully tagged gcr.io/vertex-testing-327520/rf_hp_job:test\n"
+      " ---> Running in f75c53f39ec8\n",
+      "Removing intermediate container f75c53f39ec8\n",
+      " ---> 47e042de7f52\n",
+      "Successfully built 47e042de7f52\n",
+      "Successfully tagged gcr.io/teco-prod-adam-dev-826c/lr_hp_job:v1\n"
      ]
     }
    ],
    "source": [
-    "#!docker build ./hp_lr -t $LOG_REG_IMAGE"
+    "# !docker build ./hp_lr -t $LOG_REG_IMAGE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f6ddf581-dfc3-40df-886a-436a594288c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The push refers to repository [gcr.io/teco-prod-adam-dev-826c/lr_hp_job]\n",
+      "\n",
+      "\u001b[1B8b9ad592: Preparing \n",
+      "\u001b[1Bc56a3432: Preparing \n",
+      "\u001b[1Bbfb2e242: Preparing \n",
+      "\u001b[1Bb0d69ede: Preparing \n",
+      "\u001b[1Bc3dd1b30: Preparing \n",
+      "\u001b[1Bf55e5b0f: Preparing \n",
+      "\u001b[1Bb8042115: Preparing \n",
+      "\u001b[1Be7ceaeea: Preparing \n",
+      "\u001b[1B659ee3aa: Preparing \n",
+      "\u001b[1B153ced2f: Preparing \n",
+      "\u001b[1Bb90e8bce: Preparing \n",
+      "\u001b[1Bd686dc1d: Preparing \n",
+      "\u001b[1Bc56dcfc0: Preparing \n",
+      "\u001b[1Bdd09476c: Preparing \n",
+      "\u001b[1B384be1ed: Preparing \n",
+      "\u001b[1B0864cc76: Preparing \n",
+      "\u001b[1B24e4876e: Preparing \n",
+      "\u001b[1Bbf18a086: Preparing \n",
+      "\u001b[1B282950fe: Preparing \n",
+      "\u001b[1B0b19050d: Preparing \n",
+      "\u001b[1Bb453bec5: Preparing \n",
+      "\u001b[22Bb9ad592: Pushed lready exists 5kB\u001b[21A\u001b[2K\u001b[16A\u001b[2K\u001b[17A\u001b[2K\u001b[10A\u001b[2K\u001b[8A\u001b[2K\u001b[3A\u001b[2K\u001b[4A\u001b[2K\u001b[22A\u001b[2Kv1: digest: sha256:8c44e9838cd84363ded24fb75c08d46d654127c0e69c93ac175e7d74a87a243b size: 4916\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !docker push $LOG_REG_IMAGE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d24529c8-5c49-4c4a-950d-413e7b38d274",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The push refers to repository [gcr.io/teco-prod-adam-dev-826c/rf_hp_job]\n",
+      "\n",
+      "\u001b[1B9f902063: Preparing \n",
+      "\u001b[1Bc56a3432: Preparing \n",
+      "\u001b[1Bbfb2e242: Preparing \n",
+      "\u001b[1Bb0d69ede: Preparing \n",
+      "\u001b[1Bc3dd1b30: Preparing \n",
+      "\u001b[1Bf55e5b0f: Preparing \n",
+      "\u001b[1Bb8042115: Preparing \n",
+      "\u001b[1Be7ceaeea: Preparing \n",
+      "\u001b[1B659ee3aa: Preparing \n",
+      "\u001b[1B153ced2f: Preparing \n",
+      "\u001b[1Bb90e8bce: Preparing \n",
+      "\u001b[1Bd686dc1d: Preparing \n",
+      "\u001b[1Bc56dcfc0: Preparing \n",
+      "\u001b[1Bdd09476c: Preparing \n",
+      "\u001b[1B384be1ed: Preparing \n",
+      "\u001b[1B0864cc76: Preparing \n",
+      "\u001b[1B24e4876e: Preparing \n",
+      "\u001b[1Bbf18a086: Preparing \n",
+      "\u001b[1B282950fe: Preparing \n",
+      "\u001b[1B0b19050d: Preparing \n",
+      "\u001b[1Bb453bec5: Preparing \n",
+      "\u001b[22Bf902063: Pushed lready exists 3kB\u001b[18A\u001b[2K\u001b[17A\u001b[2K\u001b[13A\u001b[2K\u001b[9A\u001b[2K\u001b[5A\u001b[2K\u001b[1A\u001b[2K\u001b[22A\u001b[2Kv1: digest: sha256:c45a8a6c16f117abf1776d2ecadb12e8f9f4494dba0cfccae0ed23771ae0a70b size: 4916\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !docker push $RANDOM_FOREST_IMAGE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6ddf581-dfc3-40df-886a-436a594288c9",
+   "id": "26c59a04-851f-4878-be5c-633c97e7c68b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1008,9 +1137,9 @@
  ],
  "metadata": {
   "environment": {
-   "name": "tf2-gpu.2-6.m80",
+   "name": "tf2-gpu.2-6.m81",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-6:m80"
+   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-6:m81"
   },
   "kernelspec": {
    "display_name": "Python 3",
