--- a/components/component_definition.ipynb
+++ b/components/component_definition.ipynb
@@ -129,10 +129,18 @@
     "    # also timestamp the data    \n",
     "    \n",
     "    from datetime import datetime\n",
+    "    import os\n",
+    "    \n",
+    "    DATA_DIR = 'batch_predict_data'\n",
+    "    \n",
+    "    if not os.path.exists(DATA_DIR):\n",
+    "        os.mkdir(DATA_DIR)\n",
     "\n",
     "    TIMESTAMP =datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
     "    \n",
-    "    DATA_PATH = f\"predicted_data_{TIMESTAMP}.csv\"\n",
+    "    DATA_NAME = f\"predicted_data_{TIMESTAMP}.csv\"\n",
+    "    \n",
+    "    DATA_PATH = os.path.join(DATA_DIR, DATA_NAME)\n",
     "    \n",
     "    df2.to_csv(DATA_PATH, index = False)\n",
     "    \n",
@@ -254,7 +262,8 @@
     "    stage_data_bucket: str,\n",
     "    dataset_train: Output[Dataset],\n",
     "    dataset_val: Output[Dataset],\n",
-    "    dataset_test: Output[Dataset] \n",
+    "    dataset_test: Output[Dataset],\n",
+    "    timestamp: OutputPath(str)\n",
     "):\n",
     "    '''\n",
     "    Toma los datos que se consideran historicos de la tabla de BQ y separa en train, validation y test. Ademas de pasarlos como componentes del pipeline, guarda una version de los datos en el bucket de stage.\n",
@@ -266,10 +275,35 @@
     "    from google.cloud import bigquery\n",
     "    from google.cloud import storage\n",
     "    from google.cloud.storage import Blob\n",
+    "    from datetime import datetime\n",
+    "    import os\n",
+    "    ## creamos la carpeta donde vamos a almacenar la data que persistiremos, respetando la estructura del bucket\n",
+    "    ## create the folder where we store the persisted data, respecting the bucket structure\n",
+    "\n",
+    "    DATA_DIR = 'data'\n",
     "    \n",
-    "    TRAIN_DATA_PATH = 'chicago_taxi_train.csv'\n",
-    "    VAL_DATA_PATH = 'chicago_taxi_val.csv'\n",
-    "    TEST_DATA_PATH = 'chicago_taxi_test.csv'\n",
+    "    if not os.path.exists(DATA_DIR):\n",
+    "        os.mkdir(DATA_DIR)\n",
+    "    \n",
+    "    TIMESTAMP = datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
+    "    \n",
+    "    with open(timestamp, 'w') as f:\n",
+    "              f.write(TIMESTAMP)\n",
+    "    \n",
+    "    # modificacion: saco el timestamp porque sino no lo ve el hp job\n",
+    "    \n",
+    "    # TRAIN_DATA_NAME = f'{TIMESTAMP}_chicago_taxi_train.csv'\n",
+    "    # VAL_DATA_NAME = f'{TIMESTAMP}_chicago_taxi_val.csv'\n",
+    "    # TEST_DATA_NAME = f'{TIMESTAMP}_chicago_taxi_test.csv'\n",
+    "    \n",
+    "    TRAIN_DATA_NAME = f'chicago_taxi_train.csv'\n",
+    "    VAL_DATA_NAME = f'chicago_taxi_val.csv'\n",
+    "    TEST_DATA_NAME = f'chicago_taxi_test.csv'\n",
+    "    \n",
+    "    TRAIN_DATA_PATH = os.path.join(DATA_DIR, TRAIN_DATA_NAME)\n",
+    "    VAL_DATA_PATH = os.path.join(DATA_DIR, VAL_DATA_NAME)\n",
+    "    TEST_DATA_PATH = os.path.join(DATA_DIR, TEST_DATA_NAME)\n",
+    "    \n",
     "    \n",
     "    ### get data from bq_source\n",
     "    bqclient = bigquery.Client(project = project, location = region)\n",
@@ -292,6 +326,8 @@
     "    train, test = tts(data, test_size=0.3)\n",
     "    train_data, val_data = tts(train, test_size = 0.2)\n",
     "    \n",
+    "    \n",
+    "    \n",
     "    train_data.to_csv(TRAIN_DATA_PATH)\n",
     "    val_data.to_csv(VAL_DATA_PATH)\n",
     "    test.to_csv(TEST_DATA_PATH)\n",
@@ -303,8 +339,8 @@
     "    blob_train = bucket.blob(TRAIN_DATA_PATH)\n",
     "    blob_train.upload_from_filename(TRAIN_DATA_PATH)\n",
     "    \n",
-    "    blob_train = bucket.blob(VAL_DATA_PATH)\n",
-    "    blob_train.upload_from_filename(VAL_DATA_PATH)\n",
+    "    blob_val = bucket.blob(VAL_DATA_PATH)\n",
+    "    blob_val.upload_from_filename(VAL_DATA_PATH)\n",
     "    \n",
     "    blob_test = bucket.blob(TEST_DATA_PATH)\n",
     "    blob_test.upload_from_filename(TEST_DATA_PATH)\n",
@@ -496,6 +532,7 @@
     "    project: str,\n",
     "    region: str,\n",
     "    stage_data_bucket: str,\n",
+    "    timestamp: str,\n",
     "    winning_model_name: Input[Artifact],\n",
     "    model_spec: Output[Artifact],\n",
     "    trials: int,\n",
@@ -504,7 +541,7 @@
     "    lr_hp_image: str,\n",
     "    hp_train_machine: str,\n",
     "    kpi: Output[Metrics],\n",
-    "    model_name: Output[Metrics] \n",
+    "    model_name: Output[Metrics]\n",
     "): \n",
     "    '''\n",
     "    Tuneo de hiperparametros. Toma el nombre del modelo ganador y utiliza la imagen de Docker correspondiente para lanzar un job de entrenamiento. Los hiperparametros obtenidos son pasados como componentes.\n",
@@ -514,6 +551,19 @@
     "    from google.cloud.aiplatform import hyperparameter_tuning as hpt\n",
     "    from google.protobuf.json_format import MessageToDict\n",
     "    import pandas as pd\n",
+    "    from google.cloud import storage\n",
+    "    from google.cloud.storage import Blob\n",
+    "    import os\n",
+    "    \n",
+    "    HP_TRIALS_DIR = 'hp_trials'\n",
+    "    TIMESTAMP = timestamp\n",
+    "    \n",
+    "    HP_TRIALS_NAME = f'{TIMESTAMP}_hp_trials.csv'\n",
+    "    \n",
+    "    if not os.path.exists(HP_TRIALS_DIR):\n",
+    "        os.mkdir(HP_TRIALS_DIR)\n",
+    "        \n",
+    "    HP_DATA_PATH = os.path.join(HP_TRIALS_DIR, HP_TRIALS_NAME)\n",
     "    \n",
     "    aiplatform.init(project = project,\n",
     "                    location = region)\n",
@@ -527,9 +577,7 @@
     "        \n",
     "    WINNING_MODEL_NAME = model_dict.get('model')\n",
     "    \n",
-    "    from datetime import datetime\n",
-    "\n",
-    "    TIMESTAMP =datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
+    "    \n",
     "    \n",
     "    if WINNING_MODEL_NAME == 'LogisticRegression':\n",
     "        WINNING_MODEL_IMAGE = LR_HP_IMAGE\n",
@@ -624,6 +672,8 @@
     "    \n",
     "    df_trials = get_trials_as_df(hp_job.trials)\n",
     "    \n",
+    "    df_trials.to_csv(HP_DATA_PATH)\n",
+    "    \n",
     "    # get trial id of the best run from the Trials\n",
     "    best_trial_id = df_trials.loc[df_trials[\"f1_score\"].idxmax()][\"Trial ID\"]\n",
     "    # get best run definition\n",
@@ -643,7 +693,16 @@
     "    kpi_acc = float(best_run['f1_score'])\n",
     "    \n",
     "    kpi.log_metric(\"f1_score\", float(kpi_acc))\n",
-    "    model_name.log_metric('model', WINNING_MODEL_NAME)"
+    "    model_name.log_metric('model', WINNING_MODEL_NAME)\n",
+    "    \n",
+    "    # subir el df con los resultados al bucket\n",
+    "    # upload df with results to bucket\n",
+    "    \n",
+    "    gcsclient = storage.Client() \n",
+    "    bucket = gcsclient.get_bucket(stage_data_bucket)\n",
+    "    \n",
+    "    blob_hp = bucket.blob(HP_DATA_PATH)\n",
+    "    blob_hp.upload_from_filename(HP_DATA_PATH)"
    ]
   },
   {
@@ -898,13 +957,21 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37d5568e-60fe-401c-8139-ac63128ef2ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "environment": {
-   "name": "tf2-gpu.2-6.m80",
+   "name": "tf2-gpu.2-6.m81",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-6:m80"
+   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-6:m81"
   },
   "kernelspec": {
    "display_name": "Python 3",
